--- a/Stylesheet/hompage.css
+++ b/Stylesheet/hompage.css
@@ -5,6 +5,7 @@
     --purple-color: #7f56d9;
     --light-color: #EEE2FE;
     --border-color:#EFF0F6;
+    --dark-gray: #8B857F;
 }
 *{
     box-sizing: border-box;
@@ -347,9 +348,282 @@ body{
 }
 .testimonial-section{
     margin-top:3.6875rem;
+    text-align: center;
 }
 .testimonial-section>button{
     font-size: 0.75rem;
+    padding: 0.25rem 1.375rem;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+    color: var(--purple-color);
+    background-color: var(--light-color);
+    border: 2px solid var(--light-color);
+}
+.testimonial-section>h1{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.testimonial-content{
+    border: 1px solid var(--border-color);
+    text-align: left;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+.testimonial-image{
+    width: 100%;
+    height: 20.93rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+.testimonial-image>img{
+    object-fit: cover;
+    border-radius: 1rem;
+    width: 100%;
+    height: 100%;
+}
+.testimonial-content>p{
+    font-size: 1rem;
+    color: var(--gray-color);
+    line-height: 1.21rem;
+    letter-spacing: -0.96px;
+    margin-bottom: 1.25rem;
+}
+.testimonial-content :is(h2, h3){
+    font-size: 1rem;
+    margin-bottom: 0.3125rem;
+    margin-top: 0rem;
+}
+.testimonial-content>nav{
+    text-align: right;
+    margin-top: 0.9375rem;
+}
+.testimonial-content>nav>i{
+    height: 1.25rem;
+    width: 1.25rem;
+}
+.trusted{
+    margin-bottom: 1.5rem;
+    height: fit-content;
+}
+.trusted>p{
+    margin: 0rem;
+    width: fit-content;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    background-color: var(--white-color);
+}
+hr{
+    width: 100%;
+    height: 1px;
+    margin: 0rem;
+    position: relative;
+    top: 0.5rem;
+    z-index: -1;
+}
+.company-logo{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    margin-bottom: 3.6875rem;
+}
+.air{
+    justify-self: center;
+}
+.out{
+    justify-self: center;
+}
+.razo{
+    justify-self: center;
+}
+.discord{
+    justify-self: end;
+}
+.drop{
+    grid-column: 3 / 4;
+    justify-self: start;
+}
+.blogs-wrapper{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.blogs-wrapper>button{
+    font-size: 0.75rem;
+    padding: 0.25rem 1.375rem;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+    color: var(--purple-color);
+    background-color: var(--light-color);
+    border: 2px solid var(--light-color);
+}
+.blogs-wrapper>h1{
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-top: 0rem;
+}
+.blogs-1, .blogs-2{
+    width: 100%;
+    padding: 1.25rem;
+    text-align: left;
+    border: 1px solid var(--border-color);
+    border-radius: 1rem;
+}
+.blogs-1>img{
+    object-fit: cover;
+    width: 100%;
+    border-radius: 1rem;
+    margin-bottom: 1.25rem;
+}
+.blogs-2>img{
+    object-fit: cover;
+    width: 100%;
+    border-radius: 1rem;
+    margin-bottom: 1.25rem;
+}
+.blog-action{
+    text-decoration: none;
+    font-size: 1rem;
+    color: var(--white-color);
+    padding: 0.25rem 0.5rem;
+    border-radius: 2.9375rem;
+    background-color: var(--purple-color);
+}
+.blogs-wrapper h2{
+    font-size: 1.25rem;
+    font-weight: 500;
+    margin-bottom: 0.9375rem;
+}
+.blogs-wrapper p{
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--gray-color);
+}
+.read-more{
+    width: 100%;
+    text-align: right;
+}
+.read{
+    text-decoration: none;
+    color: var(--dark-gray);
+    border-bottom: 1px solid black;
+}
+.action-view{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5rem;
+}
+.action-view>button{
+    padding: 0.5rem 1.875rem;
+    margin-right: 1.5rem;
+    border-radius: 1.25rem;
+    font-size: 1rem;
+    color: var(--white-color);
+    background-color: var(--purple-color);
+    border: 2px solid var(--purple-color);
+}
+.action-view>a{
+    padding-right: 0.5rem;
+    text-decoration: none;
+    font-size: 1rem;
+}
+.action-view button, .view a{
+    display: block;
+}
+.subscribe{
+    width: 100%;
+    height: 35.625rem;
+    position: relative;
+}
+.subscribe>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2rem;
+}
+.sub{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--white-color);
+    text-align: center;
+    width: 100%;
+    padding: 0.75rem;
+}
+.sub>h3{
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-bottom: 0rem;
+}
+.sub>p{
+    font-size: 0.75rem;
+    font-weight: 400;
+    margin-top: 0.25rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-bottom: 1rem;
+}
+.sub>input{
+    padding-top: 0.968rem;
+    padding-bottom: 0.968rem;
+    padding-left: 1.06rem;
+    border-radius: 0.75rem;
+    border: 2px solid var(--white-color);
+    width: 100%;
+}
+.sub>input::placeholder{
+    font-size: 0.875rem;
+}
+.sub>button{
+    padding: 0.8125rem 1.8rem 0.68rem 1.75rem;
+    background-color: var(--purple-color);
+    color: var(--white-color);
+    font-size: 0.75rem;
+    border-radius: 0.625rem;
+    border: 2px solid var(--purple-color);
+}
+footer{
+    margin-top: 2.5rem;
+    background-color: var(--purple-color);
+    padding: 3.68rem 1.375rem 2rem 1.375rem;
+}
+.footer-heading{
+    display: flex;
+    border-top: 1px solid var(--white-color);
+}
+.footer-heading>h1{
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: var(--white-color);
+}
+.footer-heading>img{
+    width: 1.7rem;
+    height: 1.5rem;
+    margin-top: 0.75rem;
+}
+.footer-list>ul{
+    list-style-type: none;
+    padding-left: 0rem;
+    padding-bottom: 1.375rem;
+    margin-bottom: 0.812rem;
+    border-bottom: 1px solid var(--white-color);
+}
+.footer-list li{
+    display: inline-block;
+    padding-right:1.25rem;
+    font-size: 1rem;
+}
+.footer-list a{
+    text-decoration: none;
+    color: var(--white-color);
+}
+footer>p{
+    font-size: 0.75rem;
+    color: var(--white-color);
 }
 @media (min-width:532px){
     .menu-list{
