--- a/Stylesheet/hompage.css
+++ b/Stylesheet/hompage.css
@@ -151,6 +151,7 @@ p{
     padding: 1rem 3rem;
 }
 .num{
+    font-family: 'Inter', sans-serif;
     font-size: 1.25rem;
     font-weight: 400;
     color: var(--purple-color);
@@ -761,6 +762,7 @@ footer>img{
     .feature>h1{
         font-size: 1.75rem;
         margin-top: 1.25rem;
+        padding: 0rem;
     }
     .feature>p{
         font-size: 1rem;
@@ -944,6 +946,7 @@ footer>img{
     }
     .main-heading>h2{
         font-size: 3rem;
+        font-weight: 400;
         line-height: 3.63rem;
         letter-spacing:-0.2rem;
     }
@@ -1051,8 +1054,10 @@ footer>img{
         margin-top: 6.25rem;
     }
     .feature>h1{
-        font-size: 3rem;
+        font-size: 2.9rem;
         margin-bottom: 1.25rem;
+        font-weight: 400;
+        text-align: left;
     }
     .content-wrapper{
         display: grid;
