--- a/Stylesheet/hompage.css
+++ b/Stylesheet/hompage.css
@@ -16,46 +16,53 @@ body{
     padding: 0px;
     margin: 0px;
 }
-h1, h2, h3{
+h1, h2, h3, button{
     font-family: 'Inter', sans-serif;
 }
 p{
     font-family: 'Manrope', sans-serif;
 }
 .main{
-    max-width: 1280px;
+    padding: 1rem 0rem;
+    max-width: 1018px;
+    width: 80%;
     margin-inline: auto;
-    /*padding: 32px 8px 32px 8px ;
-    margin: 0px;*/
 }
 .head-container, .feat-container, .mission-container, .client-container, .testimonial-container, .blogs-container, .subscribe-container{
-    max-width: 1060px;
-    margin-inline: auto;
+    max-width: 1018px;
 }
 .footer-container{
     width: 100%;
+    max-width: 1400px;
+    margin-inline: auto;
     min-height: 220px;
 }
 .main-head{
-    display: inline-flex;
+    display:flex;
+    justify-content: space-between;
     width: 100%;
     height: fit-content;
     background-color: var(--dark-color);
     padding: 5px 11px;
     border-radius: 47px;
 }
-.main-head>img{
+.first-heading{
+    display: flex;
+    gap: 5px;
+}
+.first-heading>img{
     margin-top: auto;
     margin-bottom: auto;
     height: 14px;
     object-fit: cover;
 }
 .menu-list{
-    margin: auto;
+    align-self: center;
     display: none;
 }
 .menu-list ul{
     padding: 0rem;
+    margin: 0rem;
 }
 .menu-list a{
     text-decoration: none;
@@ -67,12 +74,12 @@ p{
     display: inline;
 }
 .heading{
+    flex-grow: 1;
     color: var(--white-color);
     font-weight: 700;
     height: fit-content;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: 5px;
 }
 .heading>h1{
     margin: 0rem;
@@ -82,10 +89,15 @@ p{
     width: fit-content;
     height: fit-content;   
 }
+.menu>img{
+    margin-top: auto;
+    margin-bottom: auto;
+}
 .menu>button{
     text-align: center;
     border-radius: 1.25rem;
     padding: 0.5rem 1.875rem;
+    margin: 0rem;
     font-size: 1rem;
     font-weight: 400;
     color: var(--white-color);
@@ -145,6 +157,7 @@ p{
     height: 100%;
 }
 .users{
+    background-color: var(--white-color);
     text-align: center;
     border: 1px solid var(--border-color);
     border-radius: 1rem;
@@ -163,6 +176,7 @@ p{
 }
 .num>p{
     margin: 0px;
+    font-family: 'Inter', sans-serif;
 }
 .detail>p{
     margin: 0px;
@@ -183,6 +197,7 @@ p{
     border: 2px solid var(--light-color);
     color: var(--purple-color);
     font-size: 0.75rem;
+    font-family: 'Manrope', sans-serif;
 }
 .feature>h1{
     font-size: 1.5rem;
@@ -203,6 +218,7 @@ p{
     margin-bottom: 3.687rem;
     padding: 0.5rem;
     border: 1px solid var(--border-color);
+    background-color: var(--white-color);
     border-radius: 1rem;
 }
 .innovation{
@@ -283,10 +299,12 @@ p{
     display: none;
     text-decoration: none;
     width: fit-content;
+    font-family: 'Inter', sans-serif;
 }
 .mission{
     padding: 1rem;
     border: 1px solid var(--border-color);
+    background-color: var(--white-color);
     border-radius: 1rem;
     margin-bottom: 3.687rem;
 }
@@ -297,6 +315,7 @@ p{
     color: var(--purple-color);
     padding: 0.25rem 1rem;
     font-size: 0.75rem;
+    font-family: 'Manrope', sans-serif;
 }
 .image{
     width: 100%;
@@ -325,6 +344,7 @@ p{
     margin-bottom: 2.375rem;
 }
 .mission-action>a{
+    font-family: 'Inter', sans-serif;
     text-decoration: none;
     font-size: 0.75rem;
     color: var(--purple-color);
@@ -346,6 +366,7 @@ p{
     padding: 0.25rem 1rem;
     border-radius: 1.25rem;
     font-size: 0.75rem;
+    font-family: 'Manrope', sans-serif;
     color: var(--purple-color);
     background-color: var(--light-color);
     border: 2px solid var(--light-color);
@@ -377,6 +398,7 @@ p{
 }
 .testimonial-section>button{
     font-size: 0.75rem;
+    font-family: 'Manrope', sans-serif;
     padding: 0.25rem 1.375rem;
     margin-bottom: 1rem;
     border-radius: 1rem;
@@ -469,7 +491,7 @@ p{
     transform: translateX(-50%);
     padding-left: 1.25rem;
     padding-right: 1.25rem;
-    background-color: var(--white-color);
+    background-color: #F9FAFB;
 }
 hr{
     width: 100%;
@@ -519,6 +541,7 @@ hr{
 }
 .blogs-wrapper>button{
     font-size: 0.75rem;
+    font-family: 'Manrope', sans-serif;
     padding: 0.25rem 1.375rem;
     margin-bottom: 1rem;
     border-radius: 1rem;
@@ -554,6 +577,7 @@ hr{
 .blog-action{
     text-decoration: none;
     font-size: 1rem;
+    font-family: 'Manrope', sans-serif;
     color: var(--white-color);
     padding: 0.25rem 0.5rem;
     border-radius: 2.9375rem;
@@ -584,12 +608,12 @@ hr{
 .action-view{
     display: flex;
     align-items: center;
+    gap: 1.5rem;
     justify-content: center;
     margin-bottom: 5rem;
 }
 .action-view>button{
     padding: 0.5rem 1.875rem;
-    margin-right: 1.5rem;
     border-radius: 1.25rem;
     font-size: 1rem;
     color: var(--white-color);
@@ -601,6 +625,9 @@ hr{
     padding-right: 0.5rem;
     text-decoration: none;
     font-size: 1rem;
+}
+.action-view p{
+    font-family: 'Inter', sans-serif;
 }
 .action-view button, .view a{
     display: block;
@@ -617,7 +644,7 @@ hr{
     border-radius: 2rem;
 }
 .sub-container{
-    min-width: 290px;
+    width: 97%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -635,38 +662,44 @@ hr{
 }
 .sub>p{
     font-size: 0.75rem;
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
     margin-top: 0.25rem;
     margin-bottom: 1rem;
 }
-.sub>input{
+.input>input{
     padding-top: 0.968rem;
     padding-bottom: 0.968rem;
     padding-left: 1.06rem;
     border-radius: 0.75rem;
+    margin-bottom: 6px;
     border: 2px solid var(--white-color);
     width: 100%;
 }
-.sub>input::placeholder{
+.input>input::placeholder{
     font-size: 0.875rem;
+    font-family: 'Inter', sans-serif;
 }
-.sub>button{
+.input>button{
     padding: 0.8125rem 1.8rem 0.68rem 1.75rem;
     background-color: var(--purple-color);
     color: var(--white-color);
     font-size: 0.75rem;
+    font-family: 'Inter', sans-serif;
     border-radius: 0.625rem;
     border: 2px solid var(--purple-color);
 }
 footer{
-    min-height: 220px;
+    max-height: 265px;
+    height: 220px;
     margin-top: 2.5rem;
     background-color: var(--purple-color);
     position: relative;
 }
 footer>img{
     width: 100%;
-    min-height: 220px;
+    max-height: 265px;
+    height: 220px;
     object-fit: cover;
 }
 .footer{
@@ -675,17 +708,21 @@ footer>img{
     left: 05%;
     width: 90%;   
 }
+.footer-content{
+    border-top: 1px solid var(--white-color);
+    border-bottom: 1px solid var(--white-color);
+}
 .footer-heading{
-    height: 63px;
     display: flex;
     gap: 05px;
-    border-top: 1px solid var(--white-color);
+    margin: 1rem 0rem;   
 }
 .footer-heading>h1{
     font-size: 1.25rem;
     font-weight: 700;
     color: var(--white-color);
     align-self: center;
+    margin: 0rem;
 }
 .footer-heading>img{
     width: 1.7rem;
@@ -693,26 +730,30 @@ footer>img{
     align-self: center;
 }
 .footer-list>ul{
+    width: fit-content;
+    display: flex;
+    gap: 20px;
+    margin: 0rem;
+    margin-bottom: 1rem;
     list-style-type: none;
-    padding-left: 0rem;
-    padding-bottom: 1.375rem;
-    margin-bottom: 1.375;
-    margin-top: 0rem;
-    border-bottom: 1px solid var(--white-color);
+    padding-left: 0rem;  
 }
 .footer-list>ul>li{
-    display: inline-block;
     font-size: 1rem;
     padding-left: 0rem;
 }
 .footer-list a{
     text-decoration: none;
     color: var(--white-color);
-    padding-left: 1.25rem;
+    font-size: 1rem;
+    font-family: 'Manrope', sans-serif;
+    opacity: 80%;
 }
 .icon>p{
     font-size: 0.75rem;
+    font-family: 'Manrope', sans-serif;
     color: var(--white-color);
+    opacity: 80%;
 }
 .icon>.icons{
     display: none;
@@ -726,9 +767,10 @@ footer>img{
         height: fit-content;
     }
     .menu-list>ul{
-        margin: 0rem;
+        display: flex;
+        gap: 1rem;
     }
-    .main-head>img{
+    .first-heading>img{
         height: 20px;
         width: 24px;
     }
@@ -744,12 +786,15 @@ footer>img{
     .users{
         display: flex;
         justify-content: space-between;
-        padding: 1rem 1.5rem;
+        padding: 1rem;
     }
     .new, .active, .satisfied{
         width: 33.3%;
         border-right: 1px solid var(--border-color);
         border-bottom: none;
+    }
+    .detail>p{
+        font-size: 0.75rem;
     }
     .satisfied{
         border-bottom: none;
@@ -880,12 +925,6 @@ footer>img{
         font-size: 2.25rem;
         margin-bottom: 1.875rem;
     }
-    .sub>button{
-        position: relative;
-        top: -80%;
-        left: 49%;
-        transform: translate(-50%, -152%);
-    }
     .sub>img{
         width: 3.625rem;
         height: 3.5rem;
@@ -900,40 +939,36 @@ footer>img{
         font-size: 1.25rem;
         margin-bottom: 3.125rem;
     }
-    .footer-heading{
-        float: left;
-        border: none;
+    .footer-content{
+        display: flex;
+        justify-content: space-between;
     }
     .footer-list{
-        text-align: right;
-        border-top: 1px solid var(--white-color);
+        align-self: center; 
     }
     .footer-list>ul{
-        padding-top: 1.37rem;
+        margin: 0rem;
     }
-    .footer-list li{
-        padding-left: 0.5rem;
+    .footer-heading{
+        margin: 30px 0rem;
     }
     .icon{
         display: flex;
         justify-content: space-between;
     }
     .icon>.icons{
+        align-self: center;
         display: block;
-        padding-top: 0.75rem;
     }
     .icons>i{
         margin-left: 1.25rem;
     }
 }
 @media (min-width:768px){
-    .main{
-        padding:1rem 2rem ;
-    }
     .heading>h1{
         font-size: 1.25rem;
     }
-    .main-head>img{
+    .first-heading>img{
         height: 1.5rem;
         width: 1.75rem;
     }
@@ -962,11 +997,11 @@ footer>img{
         justify-content: space-around;
         padding: 1rem;
     }
-    .num{
+    .num>p{
         font-size: 2.25rem;
     }
-    .detail{
-        font-size: 1.25rem;
+    .detail>p{
+        font-size: 1.2rem;
     }
     .feature{
         margin-top: 5rem;
@@ -1004,23 +1039,34 @@ footer>img{
         gap: 1.875rem;
         min-height: auto;
     }
+    .input{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        background-color: var(--white-color);
+        border-radius: 0.75rem;
+        margin: 0rem;
+        padding: 0rem;  
+    }
     .sub-container{
         width: 520px;
+    }
+    .input>input{
+        width: 60%;
+        margin: 0rem;
+    }
+    .input>button{
+        align-self: center;
+        padding-top: 12.5px;
+        padding-bottom: 12.5px;
     }
     .sub>h3{
         font-size: 3rem;
     }
 }
-@media (min-width:1200px){
-    .main{
-        padding: 0.5rem 6.9375rem;
-    }
+@media (min-width:1100px){
     .heading>h1{
         font-size: 1.25rem;
-    }
-    
-    .menu-list>ul>li{
-        margin-right: 1rem;
     }
     .heading.h1{
         font-size: 1.25rem;
@@ -1041,13 +1087,13 @@ footer>img{
         margin-bottom: 3rem;
     }
     .users{
-        background-color: var(--white-color);
+        padding: 1rem 3rem;
     }
     .num{
         font-size: 3rem;
         font-weight: 600;
     }
-    .detail{
+    .detail>p{
         font-size: 1.5rem;
     }
     .feature{
@@ -1057,12 +1103,11 @@ footer>img{
         font-size: 2.9rem;
         margin-bottom: 1.25rem;
         font-weight: 400;
-        text-align: left;
+        
     }
     .content-wrapper{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        background-color: var(--white-color);
     }
     .content-wrapper img{
         width: 2.125rem;
@@ -1075,12 +1120,11 @@ footer>img{
         border-left: 1px solid var(--border-color);
     }
     .mission{
-        background-color: var(--white-color);
         margin-bottom: 6.25rem;
     }
     .mission>.image{
         width: 40%;
-        height: 428px;
+        height: 410px;
         float: right;
         margin-top: 0rem;
     }
