--- a/Stylesheet/hompage.css
+++ b/Stylesheet/hompage.css
@@ -228,7 +228,7 @@ p{
     border-bottom: 1px solid var(--border-color);
     
 }
-.innovation>h1{
+.content-wrapper h1{
     font-size: 1.5rem;
     margin-top: 1rem;
     font-weight: 500;
@@ -248,12 +248,6 @@ p{
     padding-bottom: 0rem;
     border-bottom: 1px solid var(--border-color);
 }
-.connectivity>h1{
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 2.1rem;
-    margin-bottom: 1.5rem;
-}
 .connectivity>p{
     font-size: 1rem;
     font-weight: 400;
@@ -266,12 +260,6 @@ p{
     margin-top: 1.75rem;
     padding: 1.25rem;
     padding-bottom: 0rem;
-}
-.interface>h1{
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 2.58rem;
-    margin-bottom: 1.5rem;
 }
 .interface>p{
     font-size: 1rem;
