--- a/Stylesheet/hompage.css
+++ b/Stylesheet/hompage.css
@@ -24,16 +24,17 @@ p{
 }
 .main{
     padding: 1rem 0rem;
-    max-width: 1018px;
+    max-width: 1920px;
     width: 80%;
     margin-inline: auto;
 }
 .head-container, .feat-container, .mission-container, .client-container, .testimonial-container, .blogs-container, .subscribe-container{
     max-width: 1018px;
+    margin-inline: auto;
 }
 .footer-container{
     width: 100%;
-    max-width: 1400px;
+    max-width: 1920px;
     margin-inline: auto;
     min-height: 220px;
 }
@@ -550,6 +551,7 @@ hr{
     padding: 1.25rem;
     text-align: left;
     border: 1px solid var(--border-color);
+    background-color: var(--white-color);
     border-radius: 1rem;
     margin-bottom: 1rem;
     display: flex;
@@ -561,6 +563,7 @@ hr{
 .blogs-1>img{
     object-fit: cover;
     width: 100%;
+    box-shadow: 0px 15px 35px 0px #676E7614, 0px 5px 15px 0px #0000001F;
     border-radius: 1rem;
     margin-bottom: 1.25rem;
 }
@@ -682,6 +685,7 @@ hr{
     border: 2px solid var(--purple-color);
 }
 footer{
+    width: 100%;
     max-height: 265px;
     height: 220px;
     margin-top: 2.5rem;
