--- a/Stylesheet/hompage.css
+++ b/Stylesheet/hompage.css
@@ -90,9 +90,68 @@ p{
     width: fit-content;
     height: fit-content;   
 }
-.menu>img{
-    margin-top: auto;
-    margin-bottom: auto;
+.sidebarmenu{
+    width: 24px;
+}
+.top{
+    border: 1px solid var(--purple-color);
+    margin-top: 2px;
+    border-radius: 4px;
+}
+.middle{
+    width: 70%;
+    border: 1px solid var(--purple-color);
+    margin: 5px 0px;
+    border-radius: 4px;
+}
+.low{
+    border: 1px solid var(--purple-color);
+    margin-bottom: 2px;
+    border-radius: 4px;
+}
+.sidebar-menu-list{
+    background-color: var(--dark-color);
+    position: relative;
+    z-index: +1;
+    display: none;
+    
+}
+.sidebar-menu-list>ul{
+    position: absolute;
+    top: 10px;
+    right: 0px;
+    background-color: var(--dark-color);
+    list-style-type: none;
+    display: block;
+    padding: 20px;
+    margin: 0px;
+}
+.sidebar-menu-list li{
+    padding: 10px 0px;
+}
+.sidebar-menu-list a{
+    text-decoration: none;
+    color: var(--white-color);
+    padding: 10px;
+    text-decoration: 1px underline var(--white-color);
+    text-underline-offset: 10px;
+}
+.sidebarmenu:hover{
+    margin-bottom: 8px;
+}
+.sidebarmenu:hover .sidebar-menu-list{
+    display: block;
+}
+.sidebarmenu:hover .top{
+    margin-top: 10px;
+    rotate: 45deg;
+}
+.sidebarmenu:hover .low{
+    margin-top: -14.5px;
+    rotate: -45deg;
+}
+.sidebarmenu:hover .middle{
+    opacity: 0;
 }
 .menu>button{
     text-align: center;
@@ -105,6 +164,12 @@ p{
     background-color: var(--purple-color);
     border: 2px solid var(--purple-color);
     display: none;
+}
+.sidebarmenu:hover .main-heading{
+    z-index: -1;
+}
+.sidebarmenu:hover .hero-image{
+    z-index: -1;
 }
 .main-heading>h2{
     font-size: 2rem;
@@ -757,6 +822,7 @@ footer>img{
 @media (min-width:532px){
     .main-head{
         padding: 0.75rem 1.25rem;
+        justify-content: space-between;
     }
     .menu-list{
         display: inline;
@@ -765,6 +831,9 @@ footer>img{
     .menu-list>ul{
         display: flex;
         gap: 1rem;
+    }
+    .sidebarmenu{
+        display: none;
     }
     .first-heading>img{
         height: 20px;
@@ -964,6 +1033,9 @@ footer>img{
     .first-heading>img{
         height: 1.5rem;
         width: 1.75rem;
+    }
+    .sidebarmenu{
+        display: none;
     }
     .menu>button{
         display: block;
