--- a/Stylesheet/hompage.css
+++ b/Stylesheet/hompage.css
@@ -109,34 +109,55 @@ p{
     margin-bottom: 2px;
     border-radius: 4px;
 }
-.sidebar-menu-list{
-    background-color: var(--dark-color);
+header{
     position: relative;
-    z-index: +1;
-    display: none;
-    
+}
+.sidebar-menu-list{
+    width: 100%;
+    max-width: 768px;
+    background-color: var(--dark-color);
+    border-radius: 10px;
+    z-index: -2;
+    display: none; 
 }
 .sidebar-menu-list>ul{
-    position: absolute;
-    top: 10px;
-    right: 0px;
     background-color: var(--dark-color);
     list-style-type: none;
-    display: block;
+    border-radius: 10px;
+    text-align: center;
+    position: absolute;
+    top: 80%;
+    left:0px;
+    width: 100%;
+    height: 100vh;
     padding: 20px;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
 }
 .sidebar-menu-list li{
     padding: 10px 0px;
+    flex-grow: 1;
+    justify-self: flex-start;   
+}
+.sign-action{
+    border-radius: 1.25rem;
+    border: 2px solid var(--purple-color);
+    padding: 0.3125rem 0.6875rem;
+    font-size: 0.75rem;
+    width: fit-content;
+    color: var(--white-color);
+    background-color: var(--purple-color);
 }
 .sidebar-menu-list a{
     text-decoration: none;
+    margin-inline: auto;
     color: var(--white-color);
     padding: 10px;
     text-decoration: 1px underline var(--white-color);
     text-underline-offset: 10px;
 }
-.sidebarmenu:hover{
+.openSidebarMenu:hover{
     margin-bottom: 8px;
 }
 .sidebarmenu:hover .sidebar-menu-list{
@@ -165,12 +186,6 @@ p{
     border: 2px solid var(--purple-color);
     display: none;
 }
-.sidebarmenu:hover .main-heading{
-    z-index: -1;
-}
-.sidebarmenu:hover .hero-image{
-    z-index: -1;
-}
 .main-heading>h2{
     font-size: 2rem;
     font-weight: 500;
@@ -186,7 +201,7 @@ p{
     color: var(--gray-color);
     text-align: center;
 }
-.action{
+.action, .sidebaraction{
     text-align: center;
     margin-top: 0.5rem;
 }
@@ -824,17 +839,6 @@ footer>img{
         padding: 0.75rem 1.25rem;
         justify-content: space-between;
     }
-    .menu-list{
-        display: inline;
-        height: fit-content;
-    }
-    .menu-list>ul{
-        display: flex;
-        gap: 1rem;
-    }
-    .sidebarmenu{
-        display: none;
-    }
     .first-heading>img{
         height: 20px;
         width: 24px;
@@ -1027,6 +1031,14 @@ footer>img{
     }
 }
 @media (min-width:768px){
+    .menu-list{
+        display: inline;
+        height: fit-content;
+    }
+    .menu-list>ul{
+        display: flex;
+        gap: 1rem;
+    }
     .heading>h1{
         font-size: 1.25rem;
     }
